--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -10,8 +10,14 @@ body {
 }
 
 @layer components {
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
   .btn {
-    @apply rounded-md px-3.5 py-2.5 text-sm font-medium text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 border border-transparent flex items-center gap-1 justify-center;
+    @apply rounded-md px-3.5 py-2.5 text-sm font-medium text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 border border-transparent flex-center gap-2;
+  }
+  .btn-lg {
+    @apply px-5 py-3 text-base;
   }
   .btn-primary {
     @apply bg-indigo-600  hover:bg-indigo-500;
@@ -30,9 +36,6 @@ body {
   }
   .form-control {
     @apply w-full border border-gray-200 rounded-lg p-2;
-  }
-  .flex-center {
-    @apply flex justify-center items-center;
   }
   .link {
     @apply font-medium text-black hover:text-gray-700 hover:underline;
