--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -16,6 +16,9 @@ body {
   .btn {
     @apply rounded-md px-3.5 py-2.5 text-sm font-medium text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 border border-transparent flex-center gap-2;
   }
+  .btn-sm {
+    @apply px-2.5 py-1.5 text-xs;
+  }
   .btn-lg {
     @apply px-5 py-3 text-base;
   }
@@ -24,6 +27,12 @@ body {
   }
   .btn-secondary {
     @apply bg-transparent text-black border-black bg-gray-50 hover:bg-gray-100 shadow-sm;
+  }
+  .btn-black {
+    @apply bg-black hover:bg-gray-900;
+  }
+  .btn-danger {
+    @apply bg-red-600 hover:bg-red-500;
   }
   .container {
     @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8;
